<resources>
    <string name="app_name">BusinessCard</string>
    <string name="action_settings">Settings</string>
    <string name="quote">Quote</string>
    <string name="enter_quote">Quote</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
   <string name="name">AuthorName</string>
    <string name="author_name">Author</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
